[package]
name = "arbhx-core"
version = "0.2.0"
edition = "2024"
license = "MIT or Apache-2.0"
description = "The core layer for Arbhx."
homepage = "https://ericg2.github.io/"
repository = "https://github.com/ericg2/arbhx-core"
readme = "README.md"
categories = ["filesystem"]
keywords = ["vfs"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
futures-lite = "2.6.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.51.0"
uuid = { version = "1.23.0", features = ["v4"] }
serde_derive = "1.0.228"

[features]
blocking = []
